RESOLVED FIXED117651
<meter> element text value exposed as AXTitle; should be exposing AXValueDescription
https://bugs.webkit.org/show_bug.cgi?id=117651
Summary <meter> element text value exposed as AXTitle; should be exposing AXValueDesc...
James Craig
Reported 2013-06-14 12:49:34 PDT
Created attachment 204731 [details] test case <meter> element text value exposed as AXTitle; should be exposing AXValueDescription related to bug 109023 and bug 117650
Attachments
test case (369 bytes, text/html)
2013-06-14 12:49 PDT, James Craig
no flags
Patch for feedback/test results. (5.77 KB, patch)
2013-09-06 13:55 PDT, Samuel White
no flags
Patch. (11.59 KB, patch)
2013-09-09 13:03 PDT, Samuel White
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (524.78 KB, application/zip)
2013-09-09 13:31 PDT, Build Bot
no flags
Patch. (12.54 KB, patch)
2013-09-09 14:06 PDT, Samuel White
cfleizach: review+
buildbot: commit-queue-
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 (790.97 KB, application/zip)
2013-09-09 14:57 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion (814.56 KB, application/zip)
2013-09-09 15:20 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion (879.79 KB, application/zip)
2013-09-09 15:59 PDT, Build Bot
no flags
Patch. (13.20 KB, patch)
2013-09-09 21:04 PDT, Samuel White
no flags
Patch. (13.25 KB, patch)
2013-09-09 21:38 PDT, Samuel White
no flags
Patch. (13.25 KB, patch)
2013-09-10 14:44 PDT, Samuel White
no flags
James Craig
Comment 1 2013-06-14 12:50:52 PDT
Samuel White
Comment 2 2013-09-06 13:55:03 PDT
Created attachment 210794 [details] Patch for feedback/test results. Submitting for feedback and platform test failure results, no review needed. I'm not sure if we should handle this change at the platform level as implemented, or if we should move to the axObject level so other platforms inherit this behavior. Given the close relationship between the APIs I tend to think the latter is the correct solution. Thoughts? Thanks.
chris fleizach
Comment 3 2013-09-06 13:58:42 PDT
Comment on attachment 210794 [details] Patch for feedback/test results. View in context: https://bugs.webkit.org/attachment.cgi?id=210794&action=review > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:2251 > + RenderObject* renderer = m_object->renderer(); i think we should add a isMeterElement() method in AccessibilityObject, so we don't have to check the renderer() object in the platform that will also allow us to remove the ENALBE(METER_ELEMENT) check here. that can just be moved inside isMeterElement() > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:2615 > + RenderObject* renderer = m_object->renderer(); ditto > LayoutTests/accessibility/meter-element.html:28 > + debug(meter.valueDescription); we should probably append "AXValueDescription" in the logging here so that we know what's being output in the expected results
Samuel White
Comment 4 2013-09-09 13:03:08 PDT
Created attachment 211071 [details] Patch. Updated test output and added isMeter method as requested. Thanks for taking a look Chris.
Build Bot
Comment 5 2013-09-09 13:31:45 PDT
Comment on attachment 211071 [details] Patch. Attachment 211071 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1732470 New failing tests: platform/mac/accessibility/aria-valuetext.html
Build Bot
Comment 6 2013-09-09 13:31:47 PDT
Created attachment 211075 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Samuel White
Comment 7 2013-09-09 14:06:11 PDT
Created attachment 211082 [details] Patch. Updated WebKit 2 output to fix failures.
Build Bot
Comment 8 2013-09-09 14:56:59 PDT
Comment on attachment 211082 [details] Patch. Attachment 211082 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1733453 New failing tests: platform/mac/accessibility/aria-valuetext.html
Build Bot
Comment 9 2013-09-09 14:57:02 PDT
Created attachment 211093 [details] Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Build Bot
Comment 10 2013-09-09 15:20:45 PDT
Comment on attachment 211082 [details] Patch. Attachment 211082 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/1737277 New failing tests: platform/mac/accessibility/aria-valuetext.html
Build Bot
Comment 11 2013-09-09 15:20:48 PDT
Created attachment 211103 [details] Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Build Bot
Comment 12 2013-09-09 15:59:19 PDT
Comment on attachment 211082 [details] Patch. Attachment 211082 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/1728517 New failing tests: platform/mac/accessibility/aria-valuetext.html
Build Bot
Comment 13 2013-09-09 15:59:22 PDT
Created attachment 211109 [details] Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.4
Samuel White
Comment 14 2013-09-09 21:04:14 PDT
Created attachment 211149 [details] Patch. Missed one layout test on the last pass that needed updating. Should be good now.
Samuel White
Comment 15 2013-09-09 21:38:49 PDT
Created attachment 211155 [details] Patch. Deleted a tab character that snuck in somehow.
Mario Sanchez Prada
Comment 16 2013-09-10 02:57:33 PDT
Comment on attachment 211155 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=211155&action=review > Source/WebCore/accessibility/AccessibilityObject.cpp:545 > + return false; We will get a warning (that might be treated as an error) in some platforms if you don't put this return inside an #else branch, due to it being an unreachable statement when METER_ELEMENT is enabled.
Samuel White
Comment 17 2013-09-10 14:44:37 PDT
Samuel White
Comment 18 2013-09-10 14:47:16 PDT
(In reply to comment #16) > (From update of attachment 211155 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=211155&action=review > > > Source/WebCore/accessibility/AccessibilityObject.cpp:545 > > + return false; > > We will get a warning (that might be treated as an error) in some platforms if you don't put this return inside an #else branch, due to it being an unreachable statement when METER_ELEMENT is enabled. Thanks for the tip.
Mario Sanchez Prada
Comment 19 2013-09-12 03:00:11 PDT
Comment on attachment 211246 [details] Patch. Looks good to me.
WebKit Commit Bot
Comment 20 2013-09-12 03:23:55 PDT
Comment on attachment 211246 [details] Patch. Clearing flags on attachment: 211246 Committed r155603: <http://trac.webkit.org/changeset/155603>
WebKit Commit Bot
Comment 21 2013-09-12 03:23:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.