<meter> element text value exposed as AXTitle; should be exposing AXValueDescription https://bugs.webkit.org/show_bug.cgi?id=117651

Patch by Samuel White <samuel_white@apple.com> on 2013-09-12
Reviewed by Mario Sanchez Prada.

Source/WebCore:

No new tests, updated accessibility/meter-element to handle platform specific output.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isMeter):
* accessibility/AccessibilityObject.h:
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Tools:

Prepended 'AXValueDescription: ' to valueDescription output and updated impacted tests.

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::valueDescription):
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::valueDescription):

LayoutTests:

Updated existing meter element test to cover platform specific output.

* accessibility/meter-element.html:
* platform/mac/accessibility/aria-valuetext-on-native-slider-expected.txt:
* platform/mac/accessibility/aria-valuetext-on-native-slider.html:
* platform/mac/accessibility/aria-valuetext.html:
* platform/mac/accessibility/meter-element-expected.txt: Renamed from LayoutTests/accessibility/meter-element-expected.txt.
* platform/mac/accessibility/spinbutton-valuedescription-expected.txt:
* platform/mac/accessibility/spinbutton-valuedescription.html:

Canonical link: https://commits.webkit.org/139161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155603 268f45cc-cd09-0410-ab3c-d52691b4dbfc