Source/WebCore/accessibility/AccessibilityObject.h
@@ -469,6 +469,7 @@ public:
     bool isLandmark() const;
     bool isColorWell() const { return roleValue() == ColorWellRole; }
     bool isRangeControl() const;
+    bool isMeter() const;
 
     virtual bool isChecked() const { return false; }
     virtual bool isEnabled() const { return false; }
